# Aegis

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  aegis.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
aegis/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  logger.py  models.py  output.py
aegis/data/: __init__.py  ports.py
aegis/modules/: __init__.py  base.py  cred.py  enum.py  iot.py  lateral.py  scan.py  tunnel.py
aegis/utils/: __init__.py  network.py
docs/: ARCHITECTURE.md
tests/: test_boundary_models.py  test_boundary_modules.py  test_boundary_network.py  test_boundary_output.py  test_boundary_scan.py  test_cli.py  test_models.py  test_network.py  test_ports.py
